# MMaterial-Tester

./: .gitignore  .gitmodules  README.md
Colors/: CMakeLists.txt
Colors/BaseObjects/: PaletteBasic.qml  PaletteExtended.qml  PaletteSocial.qml  ThemeBase.qml
Colors/BasicPalettes/Dark/: PrimaryDark.qml  SuccessDark.qml
Colors/BasicPalettes/Light/: ErrorLight.qml  InfoLight.qml  SecondaryLight.qml  WarningLight.qml
Colors/ExtendedPalettes/: PaletteDark.qml  PaletteLight.qml
Colors/SocialPalettes/: SocialDark.qml
Colors/Themes/: DarkTheme.qml  LightTheme.qml
Fonts/: CMakeLists.txt
Fonts/Texts/: B1.qml  B2.qml  Caption.qml  H1.qml  H2.qml  H3.qml  H4.qml  H5.qml  H6.qml  Overline.qml  Subtitle1.qml  Subtitle2.qml
MMaterial/: CMakeLists.txt  ChartElement.cpp  ChartElement.h  refresh_assets.py
MMaterial/Badge/: Badge.qml  BadgeDot.qml  BadgeNumber.qml
MMaterial/Buttons/: Checkable.qml  CheckedGroup.qml  MButton.qml  MCheckbox.qml  MFabButton.qml  MRadioButton.qml  MSwitch.qml  MToggleButton.qml
MMaterial/Charts/: BarChart.qml  WaterfallChart.qml
MMaterial/Colors/: Theme.qml  ThemeList.qml
MMaterial/Colors/BaseObjects/: PaletteBasic.qml  PaletteGrey.qml  PaletteOther.qml  ThemeBase.qml
MMaterial/Colors/BasicPalettes/: BasicBlue.qml  BasicGreen.qml  BasicLightBlue.qml  BasicOrange.qml  BasicPurple.qml  BasicRed.qml
MMaterial/Colors/Themes/: DarkTheme.qml  LightTheme.qml
MMaterial/Components/: Accordion.qml  Avatar.qml  Paginator.qml
MMaterial/Components/Alerts/: Alert.qml  AlertController.qml
MMaterial/Components/Badge/: Badge.qml  BadgeDot.qml  BadgeNumber.qml
MMaterial/Components/Common/: MLoader.qml  MScrollIndicator.qml  MSlider.qml  MToolTip.qml  MaskedImage.qml  Popup.qml
MMaterial/Components/Dialogs/: Dialog.qml  DialogButtonBox.qml  InputDialog.qml
MMaterial/Components/Inputs/: AvatarInput.qml  DatePicker.qml  MCalendar.qml  MDropdown.qml  MTextField.qml  TimePicker.qml
MMaterial/Components/Menu/: Menu.qml  MenuItem.qml  MenuSeparator.qml
MMaterial/Components/Pagination/: Paginator.qml  PaginatorArrows.qml  PaginatorBubble.qml  PaginatorSimple.qml
MMaterial/Components/Progress/: BusyIndicator.qml  MCircularProgressBar.qml  MProgressBar.qml
MMaterial/Fonts/: BaseFont.qml  PublicSans.qml
MMaterial/Fonts/Texts/: B1.qml  B2.qml  BaseText.qml  Caption.qml  H1.qml  H2.qml  H3.qml  H4.qml  H5.qml  H6.qml  Overline.qml  Subtitle1.qml  Subtitle2.qml
MMaterial/Icons/: Avatar.qml  HeavyIcon.qml  Icon.qml  IconBase.qml  IconList.qml  Icons.qml  ImageList.qml  Images.qml  LightIcon.qml
MMaterial/Lists/: AbstractListItem.qml  ListItem.qml  ListItemContact.qml
MMaterial/Settings/: Size.qml
MMaterial/Sidebar/: CompactSidebar.qml  ExtendedSidebar.qml  Sidebar.qml  SidebarCategoryLabel.qml  SidebarCompactItem.qml  SidebarData.qml  SidebarExtendedItem.qml  SidebarItem.qml  SidebarSeparator.qml
MMaterial/cmake_data/: fontPaths.txt  pngPaths.txt  svgPaths.txt
MaterialTester/: CMakeLists.txt  Init.js  Main.qml  MainWindow.qml  Placeholder.qml  main.cpp  resources.qrc
MaterialTester/Components/: AppSettings.qml  CMakeLists.txt  PresetButton.qml  SubTitle.qml  TitleRow.qml  TwoChoices.qml
MaterialTester/Components/AppSettings/: AppSettings.qml  PresetButton.qml  SubTitle.qml  TwoChoices.qml
MaterialTester/Components/Common/: TitleRow.qml
MaterialTester/Components/Sidebar/: CheckedGroup.qml  CustomSidebar.qml  Sidebar.qml  SidebarCategoryLabel.qml  SidebarItem.qml  SimpleSidebar.qml
MaterialTester/DevTools/: Clipboard.h  CustomEngine.cpp  CustomEngine.h  FileWatcher.cpp  FileWatcher.h
MaterialTester/MMaterial/: CMakeLists.txt
MaterialTester/MMaterial/Animations/: CMakeLists.txt
MaterialTester/MMaterial/Charts/: BarChart.qml  CMakeLists.txt  WaterfallChart.qml
MaterialTester/MMaterial/Controls/: AbstractListItem.qml  Accordion.qml  Alert.qml  AlertController.qml  Avatar.qml  Badge.qml  BadgeDot.qml  BadgeNumber.qml  BusyIndicator.qml  CMakeLists.txt  MBorder.qml  MCheckbox.qml  MCircularProgressBar.qml  MLoader.qml  MProgressBar.qml  MRadioButton.qml  MRectangle.qml  MScrollIndicator.qml  MSlider.qml  MSwitch.qml  MTabButton.qml  MTabs.qml  MToggleButton.qml  MToolTip.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  MultiStateButton.qml  Popup.qml  ScrollBar.qml
MaterialTester/MMaterial/Fonts/: B1.qml  B2.qml  BaseText.qml  CMakeLists.txt  Caption.qml  H1.qml  H2.qml  H3.qml  H4.qml  H5.qml  H6.qml  Overline.qml  PublicSans.qml  Subtitle1.qml  Subtitle2.qml
MaterialTester/MMaterial/Icons/: CMakeLists.txt  HeavyIcon.qml  Icon.qml  IconSet.qml  Icons.qml  Images.qml  LightIcon.qml
MaterialTester/MMaterial/Network/: DownloadDialog.qml
MaterialTester/MMaterial/Theme/: BasicBlue.qml  BasicGreen.qml  BasicLightBlue.qml  BasicOrange.qml  BasicPurple.qml  BasicRed.qml  CMakeLists.txt  DarkTheme.qml  LightTheme.qml  PaletteGrey.qml  Theme.qml  ThemeBase.qml  ThemeList.qml
MaterialTester/MMaterial/UI/: B1.qml  BaseText.qml  DarkTheme.qml  Size.qml  Theme.qml
MaterialTester/Showcase/: AccordionShowcase.qml  AlertContainer.qml  AlertShowcase.qml  AvatarShowcase.qml  BadgeShowcase.qml  BarChartShowcase.qml  BusyIndicatorShowcase.qml  ButtonGroup.qml  ButtonShowcase.qml  CMakeLists.txt  CheckboxShowcase.qml  ColorPickerShowcase.qml  ColorRect.qml  ColorShowcase.qml  ComboBoxGroup.qml  ComboBoxShowcase.qml  CustomAlert.qml  CustomSwipeView.qml  DateShowcase.qml  DateTimeShowcase.qml  DialogShowcase.qml  DownloadShowcase.qml  DropdownGroup.qml  DropdownShowcase.qml  FABButtonGroup.qml  FabButtonShowcase.qml  FontShowcase.qml  IconGeneratorTimer.qml  IconOverview.qml  IconShowcase.qml  IconSpeedComparison.qml  ListBorders.qml  ListItemShowcase.qml  MenuShowcase.qml  MultiStateButtonShowcase.qml  PaginationShowcase.qml  PaginatorArrowsShowcase.qml  PaginatorBubbleShowcase.qml  PaginatorSimpleShowcase.qml  PaletteBasicView.qml  (+17 more)
MaterialTester/Showcase/AlertShowcase/: AlertContainer.qml  AlertShowcase.qml  CustomAlert.qml
MaterialTester/Showcase/AvatarShowcase/: AvatarShowcase.qml
MaterialTester/src/Icons/: IconList.cpp  IconList.h
(+66 files in other folders)
